--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,12 @@
     <string name="app_name">Tumblr Tips</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_reblog_recommendations">ReblogRecommendations</string>
+    <string name="finish_tumblr_url">.tumblr.com</string>
+    <string name="go_button_text">Go</string>
+    <string name="default_blog_name">Blog Name</string>
+    <string name="title_activity_list_of_blogs">ListOfBlogs</string>
+    <string name="tumblr">tumblr</string>
+    <string name="tips">tips</string>
 
 </resources>
